maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:72: error: not found: value etIndication
    else if(y>0 && etIndication(x,y-1)==numb-1){
                   ^